Support location message

--- a/config/locales/error/ja.yml
+++ b/config/locales/error/ja.yml
@@ -4,8 +4,8 @@ ja:
       access_denied: "アクセスが拒否されました。"
       not_found: "データは見つかりませんでした。"
       bad_request: "不正な要求です。"
-      content_type_invalid: "ファイル形式が無効です。"
-      file_size_out_of_range: "ファイルサイズは範囲外です。"
+      content_type_invalid: "の形式が無効です。"
+      file_size_out_of_range: "のサイズ (%{file_size}) は範囲外です。"
       limit_out_of_range: "画像の数は範囲外です。"
       image_metadata_missing: "有効な画像ではありません。"
       dimension_min_inclusion: "画像のサイズは%{width} x %{height}以上にしてください。"
