Allows editing information and block users

--- a/config/locales/enum/ja.yml
+++ b/config/locales/enum/ja.yml
@@ -20,7 +20,7 @@ ja:
         android: Android
       status:
         inactive: 非アクティブ
-        active: 有効
+        actived: 有効
         blocked: 無効
         deleting: 削除中
     line_friend:
