--- a/config/locales/devise/ja.yml
+++ b/config/locales/devise/ja.yml
@@ -43,7 +43,7 @@ ja:
       locked: アカウントは凍結されています。
       not_found_in_database: "%{authentication_keys}またはパスワードが違います。"
       timeout: セッションがタイムアウトしました。もう一度ログインしてください。
-      unauthenticated: アカウント登録もしくはログインしてください。
+      unauthenticated: ""
       unconfirmed: メールアドレスの本人確認が必要です。
     mailer:
       confirmation_instructions:
