Add toggle visible button to channel friend detail page

--- a/config/locales/enum/ja.yml
+++ b/config/locales/enum/ja.yml
@@ -21,9 +21,8 @@ ja:
         deleting: 削除中
     line_friend:
       status:
-        active: 有効
+        active: 正常
         blocked: ブロック中
-        muted: ミュート中
     scenario:
       mode:
         elapsed_time: 経過時間
