--- a/config/locales/devise/ja.yml
+++ b/config/locales/devise/ja.yml
@@ -42,7 +42,7 @@ ja:
       last_attempt: もう一回誤るとアカウントがロックされます。
       locked: アカウントは凍結されています。
       not_found_in_database: "%{authentication_keys}またはパスワードが違います。"
-      timeout: セッションがタイムアウトしました。もう一度ログインしてください。
+      timeout: ""
       unauthenticated: ""
       unconfirmed: メールアドレスの本人確認が必要です。
     mailer:
