--- a/config/locales/model/ja.yml
+++ b/config/locales/model/ja.yml
@@ -14,6 +14,9 @@ ja:
         avatar: アバター
         postal_code: 郵便番号
         phone_number: 電話番号
+      agency:
+        email: メール
+        name: 代理店名
       tag:
         name: タグ名
       folder:
