--- a/config/locales/devise/ja.yml
+++ b/config/locales/devise/ja.yml
@@ -9,7 +9,7 @@ ja:
         current_password: 現在のパスワード
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
-        email: メール
+        email: メールアドレス
         encrypted_password: 暗号化パスワード
         failed_attempts: 失敗したログイン試行回数
         last_sign_in_at: 最終ログイン時刻
@@ -25,6 +25,15 @@ ja:
         unconfirmed_email: 未確認Eメール
         unlock_token: ロック解除用トークン
         updated_at: 更新日
+      admin:
+        email: メールアドレス
+        password: パスワード
+        password_confirmation: パスワード（確認用）
+      agency:
+        email: メールアドレス
+        password: パスワード
+        password_confirmation: パスワード（確認用）
+
     models:
       user: ユーザ
   devise:
@@ -68,7 +77,7 @@ ja:
         instruction: パスワード再設定の依頼を受けたため、メールを送信しています。下のリンクからパスワードの再設定ができます。
         instruction_2: パスワード再設定の依頼をしていない場合、このメールを無視してください。
         instruction_3: パスワードの再設定は、上のリンクから新しいパスワードを登録するまで完了しません。
-        subject: 健康ポイントのパスワードリセットの申請を受け付けました。
+        subject: パスワードリセットの申請を受け付けました。
       unlock_instructions:
         action: アカウントのロック解除
         greeting: "%{recipient}様"
@@ -84,14 +93,22 @@ ja:
         change_your_password: パスワードを変更
         confirm_new_password: 確認用新しいパスワード
         new_password: 新しいパスワード
+        enter_new_password_again: 新しいパスワードを再度入力
+        reset: '再設定'
       new:
         forgot_your_password: パスワードを忘れましたか?
         send_me_reset_password_instructions: パスワードの再設定方法を送信する
+        reset_password: パスワード再設定
+        send_mail: 'メールを送信'
       no_token: このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。
       send_instructions: パスワードの再設定について数分以内にメールでご連絡いたします。
       send_paranoid_instructions: メールアドレスが登録済みの場合、パスワード再設定用のメールが数分以内に送信されます。
       updated: パスワードが正しく変更されました。
       updated_not_active: パスワードが正しく変更されました。
+      sent: パスワード再設定メールを送信しました。
+      expired:
+        message_html: パスワード再設定トークンの期限が経過しました。<br> 新しくリクエストしてください。
+
     registrations:
       destroyed: アカウントを削除しました。またのご利用をお待ちしております。
       edit:
@@ -121,6 +138,7 @@ ja:
     shared:
       links:
         back: 戻る
+        back_to: に戻る
         didn_t_receive_confirmation_instructions: アカウント確認のメールを受け取っていませんか?
         didn_t_receive_unlock_instructions: アカウントの凍結解除方法のメールを受け取っていませんか?
         forgot_your_password: パスワードを忘れましたか?
