--- a/config/locales/message/ja.yml
+++ b/config/locales/message/ja.yml
@@ -7,7 +7,7 @@ ja:
       video: 動画を送信しました
       audio: 音声を送信しました
       location: 位置情報メッセージを送信しました
-      imagemap: イメージマップメッセージを送信しました
+      imagemap: リッチ画像メッセージを送信しました
       template: テンプレートメッセージを送信しました
       flex: Flexメッセージを送信しました
     logs:
