--- a/config/locales/model/ja.yml
+++ b/config/locales/model/ja.yml
@@ -31,6 +31,8 @@ ja:
         os: OS
       admin:
         current_password: 現在のパスワード
+      site:
+        name: 指定のサイト名
     models:
       user: ユーザー
       group: グループ
