--- a/config/locales/message/ja.yml
+++ b/config/locales/message/ja.yml
@@ -18,3 +18,7 @@ ja:
       scenario_end: "シナリオが終了しました：【%{title}】"
       survey: "回答フォームに回答しました：【%{name}】"
       reminder: "リマインドが配信されました：【%{title}】"
+    precheckin:
+      create_success: '事前チェックインが完了しました'
+      update_success: '事前チェックインが編集しました'
+      failed: '事前チェックインが失敗しました'
